agroups: graphical editor: do not apply changes on cancel